* Cleaned up some logging and displayed text (when downloading files). * Initial tests of the daemon~ified tools/anvil-run-jobs look good now.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/media-library.html
+++ b/html/skins/alteeve/media-library.html
@@ -975,7 +975,7 @@
 				<tr>
 					<!-- Abort -->
 					<td class="highlight_row">
-						#!string!row_0341!#:
+						<span class="highlight_bad">#!string!row_0341!#</span>:
 					</td>
 					<td class="highlight_row_data">
 						<a href="#!replace!abort_url!#">#!string!button_0081!#</a> - <a href="#!replace!delete_url!#">#!string!button_0030!#</a>
