* Finished the new cold-stop logic, but did so a bit different than originally planned. The new "which node to shut off first" logic is used, and then a sorted array of node(s) to shut off is set. Then we call 'anvil-safe-stop' on each node, in the proper order. If the errorless "second node doesn't power off" bug remains, we'll finish the logic to use delayed_ran() to initiate the shutdown on both nodes at the same time (with delays/checks to ensure shutdown ordering). * Fixed a bug in 'System->pick_shutdown_target()' so that an Inconsistent or Diskless node gets stopped first properly.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -832,6 +832,32 @@
 <br />
 <!-- end request-expired -->
 
+<!-- start cold-stop-aborted -->
+<table>
+	<tr>
+		<td colspan="2" class="highlight_ready_bold">
+			#!replace!title!#
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="highlight_warning_bold"><b>#!string!row_0129!#</b></span>
+		</td>
+		<td>
+			<br />
+			#!replace!message!#<br /><br />
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+			&nbsp;
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end cold-stop-aborted -->
+
 <!-- start confirm-join-anvil -->
 <table>
 	<tr>
