* Fixed two strings that were missing their closing '</key>' elements. * Fixed a pile of spelling mistakes.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -673,7 +673,7 @@
 <br />
 <!-- end provision-server-questions -->
 
-<!-- start confirm-withdrawl -->
+<!-- start confirm-withdrawal -->
 <table>
 	<tr>
 		<td colspan="2" class="highlight_ready_bold">
@@ -698,7 +698,7 @@
 	</tr>
 </table>
 <br />
-<!-- end confirm-withdrawl -->
+<!-- end confirm-withdrawal -->
 
 <!-- start request-expired -->
 <table>
