* Fixed a bug in scan-apc-ups where a variable wasn't initialized. * Fixed a bug in scan-bond where an opening brace was missing. * Fixed a couple of bugs in scan-storcli and did some cleanup; ** Fixed a bug where it checked for missing drive groups too early. ** Fixed a bug where drive groups where being autovivified into the hash causing errors when looking for drive groups in virtual drives that never existed. ** Fixed a bug where parsing of physical drive strings was not working in some cases. ** Updated some old 'die ...' calls with proper error calls. ** Quieted a bunch of logging.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -2194,7 +2194,7 @@
 						<td class="fixed_width">
 							#!replace!say_lv_path!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!say_lv_size!#
 						</td>
 						<td>
