* Updated Install Manifest to allow the user to specify if Lanplus is needed for IPMI access, and to set a non-standard IPMI user name to use. * Silenced a bunch of logging. * Bumped the internal version to v2.0.4.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -942,6 +942,8 @@
 						<input type="hidden" name="anvil_node1_bcn_link1_mac"     id="anvil_node1_bcn_link1_mac"     value="#!replace!anvil_node1_bcn_link1_mac!#" />
 						<input type="hidden" name="anvil_node1_bcn_link2_mac"     id="anvil_node1_bcn_link2_mac"     value="#!replace!anvil_node1_bcn_link2_mac!#" />
 						<input type="hidden" name="anvil_node1_ipmi_ip"           id="anvil_node1_ipmi_ip"           value="#!replace!anvil_node1_ipmi_ip!#" />
+						<input type="hidden" name="anvil_node1_ipmi_user"         id="anvil_node1_ipmi_user"         value="#!replace!anvil_node1_ipmi_user!#" />
+						<input type="hidden" name="anvil_node1_ipmi_lanplus"      id="anvil_node1_ipmi_lanplus"      value="#!replace!anvil_node1_ipmi_lanplus!#" />
 						<input type="hidden" name="anvil_node1_sn_ip"             id="anvil_node1_sn_ip"             value="#!replace!anvil_node1_sn_ip!#" />
 						<input type="hidden" name="anvil_node1_sn_link1_mac"      id="anvil_node1_sn_link1_mac"      value="#!replace!anvil_node1_sn_link1_mac!#" />
 						<input type="hidden" name="anvil_node1_sn_link2_mac"      id="anvil_node1_sn_link2_mac"      value="#!replace!anvil_node1_sn_link2_mac!#" />
@@ -957,6 +959,8 @@
 						<input type="hidden" name="anvil_node2_bcn_link1_mac"     id="anvil_node2_bcn_link1_mac"     value="#!replace!anvil_node2_bcn_link1_mac!#" />
 						<input type="hidden" name="anvil_node2_bcn_link2_mac"     id="anvil_node2_bcn_link2_mac"     value="#!replace!anvil_node2_bcn_link2_mac!#" />
 						<input type="hidden" name="anvil_node2_ipmi_ip"           id="anvil_node2_ipmi_ip"           value="#!replace!anvil_node2_ipmi_ip!#" />
+						<input type="hidden" name="anvil_node2_ipmi_user"         id="anvil_node2_ipmi_user"         value="#!replace!anvil_node2_ipmi_user!#" />
+						<input type="hidden" name="anvil_node2_ipmi_lanplus"      id="anvil_node2_ipmi_lanplus"      value="#!replace!anvil_node2_ipmi_lanplus!#" />
 						<input type="hidden" name="anvil_node2_sn_ip"             id="anvil_node2_sn_ip"             value="#!replace!anvil_node2_sn_ip!#" />
 						<input type="hidden" name="anvil_node2_sn_link1_mac"      id="anvil_node2_sn_link1_mac"      value="#!replace!anvil_node2_sn_link1_mac!#" />
 						<input type="hidden" name="anvil_node2_sn_link2_mac"      id="anvil_node2_sn_link2_mac"      value="#!replace!anvil_node2_sn_link2_mac!#" />
