--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -589,6 +589,7 @@
 			#!string!explain_0025!#
 		</td>
 	</tr>
+	<!-- No longer shown
 	<tr>
 		<td class="highlight_good_bold">
 			#!string!row_0116!#:
@@ -600,6 +601,7 @@
 			#!string!explain_0026!#<br />
 		</td>
 	</tr>
+	-->
 	<tr>
 		<td class="highlight_good_bold">
 			#!string!row_0117!#:
