* Made the message when an unconfigured server is found report to the user as a notice instead of an error. * Got tools/anvil-rehome-server creating referenced LVs in existing XML definitions that don't exist locally on disk yet.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -106,6 +106,25 @@ $(function() {
 <br />
 <!-- end error-table -->
 
+<!-- start notice-table -->
+<table>
+	<tr>
+		<td colspan="2" class="highlight_ready_bold">
+			#!string!title_0116!#
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_warning_bold">
+			#!string!row_0011!#
+		</td>
+		<td>
+			#!replace!message!#
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end notice-table -->
+
 <!-- start scanning-message -->
 <div id="hide_when_loaded">
 <table>
