* Fixed a bug in scan-hardware where, after RAM differenced between node, the alert wouldn't clear when evened out again. * Added support for Windows 2019 support, and switched both to use '--cpu host' instead of specifying '--cpu Nehalem,+fsgsbase'. * Added support for logging to specific files with '--log-to /path/to/file' on all programs. * Cleaned up some display bugs in Striker's WebUI. * Fixed bugs in anvil-report-usage.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -2066,22 +2066,22 @@
 						<td>
 							&nbsp;
 						</td>
-						<td>
-							<span class="fixed_width">#!replace!vg!#</span>
+						<td class="fixed_width">
+							#!replace!vg!#
 						</td>
 						<td>
 							#!string!message_0270!#
 						</td>
-						<td>
-							<span class="fixed_width">#!replace!pv_name!#</span>
+						<td class="fixed_width">
+							#!replace!pv_name!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!say_vg_size!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!say_vg_used!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!say_vg_free!#
 						</td>
 					</tr>
